[gd_scene load_steps=12 format=3 uid="uid://b2ur21rexbarw"]

[ext_resource type="Texture2D" uid="uid://c41xkedkpflpf" path="res://Sprites/Abilities/GreenAppleVomit.png" id="1_emh3j"]
[ext_resource type="Script" path="res://Scripts/Abilities/green_apple_vomit.gd" id="1_pvdrq"]
[ext_resource type="AudioStream" uid="uid://bi6t2k2ylw3a3" path="res://Sounds/VomitSizzle.mp3" id="3_8ujsw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j8sqk"]
atlas = ExtResource("1_emh3j")
region = Rect2(262, 0, 131, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxdpx"]
atlas = ExtResource("1_emh3j")
region = Rect2(393, 0, 131, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2unh2"]
atlas = ExtResource("1_emh3j")
region = Rect2(0, 0, 131, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hi47"]
atlas = ExtResource("1_emh3j")
region = Rect2(131, 0, 131, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_26dtb"]
atlas = ExtResource("1_emh3j")
region = Rect2(262, 0, 131, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5a72"]
atlas = ExtResource("1_emh3j")
region = Rect2(131, 0, 131, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci3xc"]
atlas = ExtResource("1_emh3j")
region = Rect2(0, 0, 131, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_gw5cq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8sqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxdpx")
}],
"loop": true,
"name": &"stand",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2unh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hi47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26dtb")
}],
"loop": false,
"name": &"vomit",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5a72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci3xc")
}],
"loop": false,
"name": &"vomit_end",
"speed": 10.0
}]

[node name="Green_Apple_Vomit" type="Area2D"]
modulate = Color(1, 1, 1, 0.784314)
collision_layer = 14
collision_mask = 14
script = ExtResource("1_pvdrq")
original_damage = 1.0
despawn_time = 1.6
has_movement = false
die_wait_time = 0.1
generated_by = 2
add_extra_physics_process = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(65, 3)
sprite_frames = SubResource("SpriteFrames_gw5cq")
animation = &"vomit_end"
autoplay = "vomit"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 1)
polygon = PackedVector2Array(129, -18, 129, 21, -1, 0, -1, -3)

[node name="Effects_Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Vomit_Sizzle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8ujsw")
volume_db = -14.0
pitch_scale = 0.8
bus = &"Sounds"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="die" from="." to="." method="_on_die"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Effects_Timer" to="." method="_on_effects_timer_timeout"]
